// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect TreeSelect baseVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <div
        class="t-input__wrap t-select__input"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect collapsedVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-collapsed"
>
  <div
    class="demo-space t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="guangzhou"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            guangzhou
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          style="display: none;"
          title="shenzhen"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            shenzhen
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        +1
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
   
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="guangzhou"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            guangzhou
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          style="display: none;"
          title="shenzhen"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            shenzhen
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
      >
        更多...
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect dvalueVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <span
        class="t-select__single t-tree-select t-single-suffix"
        title="shenzhen,guangzhou"
      >
        shenzhen,guangzhou
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="shenzhen,guangzhou"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect filterableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column-large"
>
  <div>
    <div
      class="t-radio-group t-size-m t-radio-group--filled"
    >
      <label
        class="t-radio-button t-is-checked"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="default"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          默认
        </span>
      </label>
       
      <label
        class="t-radio-button"
      >
        <input
          class="t-radio-button__former"
          name=""
          type="radio"
          value="function"
        />
        <span
          class="t-radio-button__input"
        />
        <span
          class="t-radio-button__label"
        >
          自定义方法
        </span>
      </label>
      <div
        class="t-radio-group__bg-block"
        style="width: 0px; left: 0px;"
      />
    </div>
  </div>
   
  <div
    class="t-select__wrap"
    style="width: 300px;"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <span
        class="t-select__single t-tree-select t-single-suffix"
        title="shenzhen"
      >
        shenzhen
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="shenzhen"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect lazyVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-lazy"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请选择"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect multipleVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-multiple"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="guangzhou"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            guangzhou
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="shenzhen"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            shenzhen
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +2
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect prefixVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-prefix"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-has-prefix t-select__popup-reference"
    >
      <span
        class="t-select__left-icon"
      >
        <svg
          class="t-icon t-icon-user"
        >
          <use
            href="#t-icon-user"
          />
        </svg>
      </span>
      <span
        class="t-select__placeholder"
      >
        请输入
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect propsVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <span
        class="t-select__single t-tree-select t-single-suffix"
        title="shenzhen"
      >
        shenzhen
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="shenzhen"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect valuedisplayVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-valuedisplay"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
       () 
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="shenzhen"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
   
  <div
    class="tree-select-multiple t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +2
      </span>
      <div
        class="t-input__wrap t-select__input"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect TreeSelect valuetypeVue demo works fine 1`] = `
<div
  class="tdesign-tree-select-base"
>
  <div
    class="t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      />
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +0
      </span>
      <span
        class="t-select__single t-tree-select t-single-suffix"
        title="[object Object]"
      >
        [object Object]
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="[object Object]"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
   
  <div
    class="tree-select-multiple t-select__wrap"
  >
    <div
      class="t-select t-select-polyfill t-size-m t-select-selected t-select__popup-reference"
    >
      <span
        class="t-select__placeholder"
        style="display: none;"
      >
        请选择
      </span>
      <span
        class="t-tree-select t-tag-prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="[object Object]"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            undefined
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--ellipsis t-tag--close"
          title="[object Object]"
        >
          <span
            class="t-tag--text"
            style="max-width: 300px;"
          >
            undefined
          </span>
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </span>
      <span
        class="t-tag t-tag--default t-size-m t-tag--dark"
        style="display: none;"
      >
        +2
      </span>
      <div
        class="t-input__wrap t-select__input"
        style="display: none;"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder=""
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <svg
        class="t-fake-arrow t-select__right-icon t-select__right-icon-polyfill"
        fill="none"
        height="16"
        style="font-size: medium;"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
          stroke="black"
          stroke-opacity="0.9"
          stroke-width="1.3"
        />
      </svg>
      <svg
        class="t-icon t-icon-close-circle-filled t-size-m t-select__right-icon t-select__right-icon-polyfill t-select__right-icon-clear"
        fill="none"
        height="1em"
        style="display: none;"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      <div
        class="t-loading--center t-size-s t-loading t-select__right-icon t-select__right-icon-polyfill t-select__active-icon"
        style="display: none;"
      >
        <svg
          class="t-loading__gradient t-icon-loading"
          height="1em"
          size="small"
          version="1.1"
          viewBox="0 0 14 14"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <foreignobject
            height="12"
            width="12"
            x="1"
            y="1"
          >
            <div
              class="t-loading__gradient-conic"
            />
          </foreignobject>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
